@@ -1,3 +1,6 @@
+Thu Dec 17 22:08:50 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/odbc/odbc.c: Automatic odbc version selection
+
 Thu Dec 17 11:33:39 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* include/tdsodbc.h src/odbc/odbc.c:
 	- Fix statistics functions for Sybase
@@ -2010,4 +2013,4 @@ Wed Jan  9 19:54:43 EST 2008	JK Lowden <jklowden@freetds.org>
 	* ChangeLog-0.82 added because of release
 	
 $FreeTDS$
-$Id: ChangeLog,v 1.2912 2009/12/17 10:33:59 freddy77 Exp $
+$Id: ChangeLog,v 1.2913 2009/12/17 21:08:59 freddy77 Exp $
